--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,453 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --black: #000;
+  --white: #fff;
+  --red-primary: #e50914;
+  --red-primary-dark: #bf0710;
+  --bg-black: #000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  height: auto;
+  background-color: var(--bg-black);
+}
+
+.container {
+  padding: 0 1.5rem;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+/* Navbar styles */
+.navbar {
+  border-bottom: solid 1px #fff;
+}
+
+.navbar .navbar-nav li {
+  list-style: none;
+}
+
+.navbar .navbar-nav .nav-link,
+.navbar .navbar-nav .nav-btn {
+  text-decoration: none;
+  color: var(--white);
+  position: relative;
+}
+
+.navbar .navbar-nav .nav-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  height: 3px;
+  width: 0px;
+  border-radius: 2px;
+  background-color: var(--red-primary);
+  transition: 0.4s ease-in;
+}
+
+.navbar .navbar-nav .nav-link:hover::after {
+  width: 100%;
+}
+
+.navbar .navbar-nav .nav-btn {
+  padding: 8px 16px;
+  margin: auto;
+  background-color: var(--red-primary-dark);
+  outline: none;
+  text-transform: uppercase;
+}
+
+.navbar .navbar-nav .nav-btn:hover {
+  background-color: var(--red-primary);
+}
+
+/* Carousel styles */
+.row > * {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.carousel {
+  height: auto !important;
+}
+
+.carousel-column {
+  height: inherit;
+  width: 900px;
+  margin: 2.5rem auto;
+}
+
+.carousel-inner .carousel-item img {
+  height: 550px;
+}
+
+@media screen and (max-width: 768px) {
+  .carousel-inner .carousel-item img {
+    height: 320px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .carousel-inner .carousel-item img {
+    height: 210px;
+  }
+}
+
+.top-rated,
+.new-releases {
+  margin: 2rem 0;
+}
+
+.top-rated .block,
+.new-releases .block {
+  border-left: 4px solid var(--red-primary-dark);
+  padding-left: 1rem;
+}
+
+/* Slider styles */
+.slider {
+  display: flex;
+  overflow-x: scroll;
+  padding: 24px 0;
+  scroll-snap-type: x mandatory;
+  scroll-padding: 24px;
+  gap: 12px;
+}
+
+.slider .card {
+  flex: 0 0 16.66%;
+  scroll-snap-align: start;
+  background-color: #1a1a1a;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 1px -2px,
+    rgba(0, 0, 0, 0.14) 0px 2px 2px 0px, rgba(0, 0, 0, 0.12) 0px 1px 5px 0px;
+  border-radius: 8px;
+}
+
+.slider .card img {
+  width: inherit;
+  height: 330px;
+  overflow: hidden;
+  border-radius: 8px 8px 0 0;
+  cursor: pointer;
+}
+
+.slider .card img:hover {
+  opacity: 0.8;
+}
+
+.slider::-webkit-scrollbar {
+  display: none;
+}
+
+.slider .rating {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.8);
+  margin: 10px 10px;
+  padding: 2px 4px;
+  border-radius: 4px;
+}
+
+.slider .card .card-body {
+  color: #fff;
+}
+
+.slider .card .card-body p {
+  font-size: 18px;
+  margin-bottom: 0.25rem;
+}
+
+.slider .card .card-body button {
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.08);
+  border-radius: 4px;
+  color: var(--red-primary);
+  font-weight: bolder;
+}
+
+.slider .card .card-body button:hover {
+  background-color: rgba(255, 255, 255, 0.15);
+}
+
+@media screen and (max-width: 1200px) {
+  .slider .card {
+    flex: 0 0 25%;
+  }
+  .slider .card img {
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .slider .card {
+    flex: 0 0 41.66%;
+  }
+  .slider .card img {
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .slider .card {
+    flex: 0 0 58.33%;
+  }
+  .slider .card img {
+    height: 250px;
+  }
+}
+
+.concord-img-wrapper {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.concord-img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.concord-img-gradient {
+  background: rgba(0, 0, 0, 0.5);
+  background-image: linear-gradient(0deg, transparent 50%, rgba(0, 0, 0, 0.7)),
+    radial-gradient(50% 100%, transparent 0, rgba(0, 0, 0, 0.7) 100%);
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.form-transparent::-webkit-scrollbar {
+  display: none;
+}
+
+.form-transparent {
+  width: auto;
+  max-width: 450px;
+  max-height: 550px;
+  overflow: auto;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 1;
+  z-index: 1;
+}
+
+.nav-properties {
+  border-bottom: 2px solid white;
+}
+
+.nav-pills .nav-link.active,
+.btn-submit {
+  background: #e50914;
+  color: white;
+}
+
+.btn-link {
+  color: white;
+}
+
+.btn-wishlist {
+  color: #e50914;
+}
+.btn-wishlist:hover {
+  color: #fff;
+}
+
+.card-footer:hover {
+  background-color: rgba(255, 255, 255, 0.15);
+}
+
+.overview {
+  text-align: justify;
+}
+
+.category {
+  color: #fff;
+  background-color: transparent;
+  padding: 4px 12px;
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  border-radius: 30px;
+}
+
+.btn-watchlist {
+  margin: 10px 0;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.158);
+  width: 100%;
+}
+
+.btn-watchlist:hover {
+  color: #fff;
+  border: 1px solid #fff;
+}
+
+.btn-rate {
+  margin: 10px 0;
+  color: #000;
+  background-color: #fbbe07;
+  width: 100%;
+  font-weight: 500;
+}
+
+.btn-rate:hover {
+  color: #fff;
+  border: 1px solid #000;
+}
+
+.video-responsive {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  padding-bottom: 400px;
+  position: relative;
+  height: 0;
+}
+
+.video-responsive iframe {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 400px;
+  position: absolute;
+}
+
+.ratebox {
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 8px;
+  padding: 10px;
+  animation: normal 1s;
+}
+
+.ratebox select,
+.ratebox input,
+.ratebox input:focus {
+  color: #fff;
+  background-color: #000;
+  border: 0;
+}
+
+.reviewbox {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.spinner {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  border: 9px solid #e50914;
+  animation: spinner-bulqg1 0.8s infinite linear alternate,
+    spinner-oaa3wk 1.6s infinite linear;
+}
+
+@keyframes spinner-bulqg1 {
+  0% {
+    clip-path: polygon(50% 50%, 0 0, 50% 0%, 50% 0%, 50% 0%, 50% 0%, 50% 0%);
+  }
+
+  12.5% {
+    clip-path: polygon(
+      50% 50%,
+      0 0,
+      50% 0%,
+      100% 0%,
+      100% 0%,
+      100% 0%,
+      100% 0%
+    );
+  }
+
+  25% {
+    clip-path: polygon(
+      50% 50%,
+      0 0,
+      50% 0%,
+      100% 0%,
+      100% 100%,
+      100% 100%,
+      100% 100%
+    );
+  }
+
+  50% {
+    clip-path: polygon(
+      50% 50%,
+      0 0,
+      50% 0%,
+      100% 0%,
+      100% 100%,
+      50% 100%,
+      0% 100%
+    );
+  }
+
+  62.5% {
+    clip-path: polygon(
+      50% 50%,
+      100% 0,
+      100% 0%,
+      100% 0%,
+      100% 100%,
+      50% 100%,
+      0% 100%
+    );
+  }
+
+  75% {
+    clip-path: polygon(
+      50% 50%,
+      100% 100%,
+      100% 100%,
+      100% 100%,
+      100% 100%,
+      50% 100%,
+      0% 100%
+    );
+  }
+
+  100% {
+    clip-path: polygon(
+      50% 50%,
+      50% 100%,
+      50% 100%,
+      50% 100%,
+      50% 100%,
+      50% 100%,
+      0% 100%
+    );
+  }
+}
+
+@keyframes spinner-oaa3wk {
+  0% {
+    transform: scaleY(1) rotate(0deg);
+  }
+
+  49.99% {
+    transform: scaleY(1) rotate(135deg);
+  }
+
+  50% {
+    transform: scaleY(-1) rotate(0deg);
+  }
+
+  100% {
+    transform: scaleY(-1) rotate(-135deg);
+  }
 }
